:green_heart: Chore: CI 빌드 시크릿 수정

--- a/.github/workflows/deploy-to-fork.yml
+++ b/.github/workflows/deploy-to-fork.yml
@@ -22,5 +22,5 @@ jobs:
           destination-github-username: GraceKim527
           destination-repository-name: LikeLion-13th-TEAM06-FE
           user-email: ${{ secrets.PERSONAL_EMAIL }}
-          commit-message: '🔁 Sync from team repo ${{ github.sha }}'
+          commit-message: '🔁 Sync from team repo: ${{ github.sha }}'
           target-branch: main
