:green_heart: Chore: 권한문제로 인한 CI 시크릿 수정

--- a/.github/workflows/deploy-to-fork.yml
+++ b/.github/workflows/deploy-to-fork.yml
@@ -23,4 +23,4 @@ jobs:
           destination-repository-name: LikeLion-13th-TEAM06-FE
           user-email: ${{ secrets.PERSONAL_EMAIL }}
           target-branch: main
-          commit-message: '🔁 Sync from team repo ${{ github.sha }}'
+          commit-message: '🔁 Sync from team repo: ${{ github.sha }}'
