:green_heart: Fix: ci 빌드오류 수정

--- a/.github/workflows/deploy-to-fork.yml
+++ b/.github/workflows/deploy-to-fork.yml
@@ -16,7 +16,7 @@ jobs:
         uses: cpina/github-action-push-to-another-repository@main
 
         env:
-          API_TOKEN_GITHUB: ${{ secrets.PERSONAL_REPO_TOKEN }}
+          API_TOKEN_GITHUB: ${{ secrets.PAT_FOR_SYNC }}
         with:
           source-directory: '.'
           destination-github-username: GraceKim527
