--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
     "sass": "^1.90.0",
+    "vite-plugin-svgr": "^4.3.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
